@@ -653,20 +653,45 @@ name|int
 name|delCount
 parameter_list|)
 block|{
+if|if
+condition|(
+name|delCount
+argument_list|<
+literal|0
+operator|||
+name|delCount
+argument_list|>
+name|info
+operator|.
+name|getDocCount
+argument_list|()
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"invalid delCount="
+operator|+
+name|delCount
+operator|+
+literal|" (docCount="
+operator|+
+name|info
+operator|.
+name|getDocCount
+argument_list|()
+operator|+
+literal|")"
+argument_list|)
+throw|;
+block|}
 name|this
 operator|.
 name|delCount
 operator|=
 name|delCount
 expr_stmt|;
-assert|assert
-name|delCount
-operator|<=
-name|info
-operator|.
-name|getDocCount
-argument_list|()
-assert|;
 block|}
 comment|/** Returns a description of this segment. */
 DECL|method|toString
