@@ -1187,6 +1187,13 @@ literal|"invalid deletion count: "
 operator|+
 name|delCount
 operator|+
+literal|" vs docCount="
+operator|+
+name|info
+operator|.
+name|getDocCount
+argument_list|()
+operator|+
 literal|" (resource: "
 operator|+
 name|input
@@ -1642,14 +1649,56 @@ name|getDelGen
 argument_list|()
 argument_list|)
 expr_stmt|;
-name|segnOutput
-operator|.
-name|writeInt
-argument_list|(
+name|int
+name|delCount
+init|=
 name|siPerCommit
 operator|.
 name|getDelCount
 argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|delCount
+argument_list|<
+literal|0
+operator|||
+name|delCount
+argument_list|>
+name|si
+operator|.
+name|getDocCount
+argument_list|()
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalStateException
+argument_list|(
+literal|"cannot write segment: invalid docCount segment="
+operator|+
+name|si
+operator|.
+name|name
+operator|+
+literal|" docCount="
+operator|+
+name|si
+operator|.
+name|getDocCount
+argument_list|()
+operator|+
+literal|" delCount="
+operator|+
+name|delCount
+argument_list|)
+throw|;
+block|}
+name|segnOutput
+operator|.
+name|writeInt
+argument_list|(
+name|delCount
 argument_list|)
 expr_stmt|;
 name|segnOutput
@@ -1735,17 +1784,6 @@ operator|.
 name|dir
 operator|==
 name|directory
-assert|;
-assert|assert
-name|siPerCommit
-operator|.
-name|getDelCount
-argument_list|()
-operator|<=
-name|si
-operator|.
-name|getDocCount
-argument_list|()
 assert|;
 block|}
 name|segnOutput
